--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,31 @@
-   [[headers]]
-     for = "/*"
-     [headers.values]
-     Access-Control-Allow-Origin = "*"
+[build]
+  publish = "."
+
+[context.production.environment]
+  NODE_VERSION = "20.19.0"
+
+[build.environment]
+  NODE_VERSION = "20.19.0"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+[build.processing]
+  skip_processing = false
+[build.processing.css]
+  bundle = true
+  minify = true
+[build.processing.js]
+  bundle = true
+  minify = true
+[build.processing.html]
+  pretty_urls = true
+[build.processing.images]
+  compress = true
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+  Access-Control-Allow-Origin = "*"
