--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
 functions = "functions"
 publish = "."
+command = "npm install"
 
 [[redirects]]
 from = "/api/*"
@@ -10,6 +11,7 @@ status = 200
 [functions]
 node_bundler = "esbuild"
 external_node_modules = ["@netlify/functions"]
+directory = "functions"
 
 [[headers]]
 for = "/api/*"
@@ -38,3 +40,8 @@ status = 200
 
 [dev]
 port = 3998
+
+[[redirects]]
+from = "/callback"
+to = "/index.html"
+status = 200
