--- a/netlify.toml
+++ b/netlify.toml
@@ -45,3 +45,8 @@ port = 3998
 from = "/callback"
 to = "/index.html"
 status = 200
+
+[[redirects]]
+from = "/.netlify/functions/*"
+to = "/.netlify/functions/:splat"
+status = 200
