--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "@netlify/functions": "^2.0.0",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "netlify-cli": "^12.0.0"
-  }
+  },
+  "author": "",
+  "license": "ISC"
 } 
