--- a/netlify.toml
+++ b/netlify.toml
@@ -11,7 +11,7 @@ status = 200
 [functions]
 node_bundler = "esbuild"
 external_node_modules = ["@netlify/functions"]
-directory = "functions"
+directory = "netlify/functions"
 
 [[headers]]
 for = "/api/*"
